<resources>
    <string name="todo_list">Список дел</string>
    <string name="app_name">laboratornaya_8</string>
    <string name="walk_to_cinema">Вечерний поход в кино</string>
    <string name="going_to_cinema">Идем в кино с коллегами!</string>
    <string name="date_cinema">10.02.2021</string>
    <string name="time_cinema">19:40</string>
    <string name="pickup_order">Забрать заказ Ozon</string>
    <string name="point_of_issue">Пунк выдачи на ул. Ленина, 103</string>
    <string name="take_to_car_service">Сдать автомобиль в автосервис на ул.Бисертская, д. 14. Замена масла</string>
    <string name="write_in_car_service">Запись в автосервис</string>
    <string name="todo">TODO</string>
    <string name="alarm">Будильник</string>
    <string name="time1">07:30</string>
    <string name="time2">08:00</string>
    <string name="add_alarm">Добавить будильник</string>
    <string name="calendar">Календарь</string>
    <string name="settings">Настройки</string>
    <string name="profile">Профиль пользователя</string>
    <string name="date_and_time">Дата и время</string>
    <string name="sound_settings">Настройки звука</string>
    <string name="check_updates">Проверить обновления</string>
    <string name="sign">Регистрация</string>
    <string name="sign_button">Регистрация</string>
    <string name="name_profile">Имя пользователя</string>
    <string name="adress">Адрес электронной почты</string>
    <string name="password">Пароль</string>
    <string name="edit_task">Изменить задачу</string>
    <string name="task_name">Заголовок задачи</string>
    <string name="time">16:30</string>
    <string name="date">14.01.2021</string>
    <string name="description_task">Описание задачи</string>
    <string name="delete_task">Удалить задачу</string>
    <string name="write_task">Записать задачу</string>
    <string name="add_task">Добавить задачу</string>
    <string name="repeat">Повторять каждый</string>
    <string name="Monday">Понедельник</string>
    <string name="Tuesday">Вторник</string>
    <string name="Wednesday">Среда</string>
    <string name="Thursday">Четверг</string>
    <string name="Friday">Пятница</string>
    <string name="Saturday">Суббота</string>
    <string name="Sunday">Воскресенье</string>
    <string name="create_alarm">Создать будильник</string>
    <string name="edit_alarm">Изменить будильник</string>
    <string name="save_alarm">Сохранить будильник</string>
    <string name="delete_alarm">Удалить будильник</string>
    <string name="not_login">Вход не выполнен</string>
    <string name="login">Войти</string>
    <string name="avatar">Аватар</string>
    <string name="bottom_panel">Нижняя панель</string>
    <string name="list">Лист</string>
    <string name="arrow">Стрелочка</string>
    <string name="arrow2">Стрелочка2</string>
    <string name="arrow3">Стрелочка3</string>
    <string name="arrow4">Стрелочка4</string>
    <string name="alarm2">Будильник2</string>
    <string name="calendar2">Календарь2</string>
    <string name="settings2">Настройки2</string>
</resources>